from 1.3.1 to 1.3.2
- more qt automake options for strange qt configs
- simplified system startup defaults

from 1.3.0 to 1.3.1
- initial support for exosip2/osip2 4.0
- more mingw32 build support

from 1.2.5 to 1.3.0
- contact for autoconfiguring clients; can be set in cfg or computed
- systemd support lands
- mingw32 build support
- osip2 published dev headers brokenly used derived packages config.h

from 1.2.4 to 1.2.5
- various source build issues with config.h and cleanup
- fixes for cmake pkgconfig searches
- fix group and user handling logic
- fix overlinking for runtime and plugins

from 1.2.3 to 1.2.4
- option to force interface address through config
- world/all global subnet entry

from 1.2.2 to 1.2.3
- dumpconfig option to understand effective config
- user configuration options
- sipwitch policy command to examine access policy and peering

from 1.2.1 to 1.2.2
- cache directory defined and set
- improved management of active configurations
- bumped ucommon dependency up to 5.2.0

from 1.2.0 to 1.2.1
- sip server command line interface options per Simon request
- start of cache support for peers, multicast users, etc
- manpage standardization

from 1.1.4 to 1.2.0
- removed uneeded subscriber thread, cleared cpu usage with plugin.

from 1.1.3 to 1.1.4
- switchview icon resources now themable, new icon resources added.
- icon resources now used in switchview menu.

from 1.1.2 to 1.1.3
- waiting threads include error handling and throttling.

from 1.1.1 to 1.1.2
- cmake fix for openssl check.
- renaming and reorg of sipwitch cgi binary.

from 1.1.0 to 1.1.1
- notify watcher for config directory.

from 1.0.3 to 1.1.0
- added switchview gui client to package.

from 1.0.2 to 1.0.3
- fix for init script.
- -d also alt background flag for convenience.

from 1.0.1 to 1.0.2
- new server redirection api.  This allows plugins to operate without
  having to be linked explicitly to and directly call exosip functions.
- documented plugin api and runtime headers