@@ -1,6 +1,7 @@
 from 1.3.1 to 1.3.2
 - more qt automake options for strange qt configs
 - simplified system startup defaults
+- sipwitch hotspot --public mode option
 
 from 1.3.0 to 1.3.1
 - initial support for exosip2/osip2 4.0
